<resources>
    <string name="app_name">Howie</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="snooze">Snooze</string>
    <string name="due">Due</string>
    <string name="new_task">New Task</string>
    <string name="pick_date">Pick Date</string>
    <string name="button_for_adding_a_task">Button for adding a task</string>
    <string name="action_delete">Delete</string>
    <string name="task_item_default_name">Name</string>
    <string name="task_item_default_due">Due: 2020-12-24</string>
    <string name="task_item_default_snooze">Snoozed: 2020-12-24</string>
    <string name="edit_name_of_task">Name of Task</string>
    <string name="importancetogglebutton">ImportanceToggleButton</string>
    <string name="unimportant">Unimportant</string>
    <string name="important">Important</string>
    <string name="snoozedTasks">Snoozed Tasks</string>
    <string name="tasks">Tasks</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="importance">Importance</string>
    <string name="update">Update</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="add_new_list">Add New List</string>
    <string name="show_archive">Show Archive</string>
    <string name="rename_list">Rename List</string>
    <string name="delete_list">Delete List</string>
    <string name="move_to_different_list">Move to different list</string>
    <string name="expand_toggle_button">Expand Toggle Button</string>
    <string name="create">Create</string>
    <string name="uninitialized">Uninitialized</string>
    <string name="input_field_for_time_unit_quantity">0</string>
    <string-array name="time_units">
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month(s)</item>
        <item>Year(s)</item>
    </string-array>
    <string name="schedule">Recurring</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="unsnooze">Unsnooze</string>
    <string name="edit">Edit</string>
    <string name="expand_indicator">Expand indicator</string>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="schedule_options">
        <item>Every</item>
        <item>Week Day</item>
        <item>Day of Month</item>
    </string-array>
</resources>
