<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.howie.TaskActivity">
    <item android:id="@+id/action_update"
        android:title="@string/update"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_unarchive"
        android:orderInCategory="99"
        android:title="@string/unarchive"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_archive"
        android:orderInCategory="99"
        android:title="@string/archive"
        app:showAsAction="never"/>
    <item android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
</menu>