<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lorenz.howie.ui.MainActivity">

    <item
        android:icon="@drawable/outline_more_vert_24"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_show_archive"
                android:icon="@drawable/outline_archive_24"
                android:title="@string/show_archive"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_rename"
                android:icon="@drawable/outline_edit_24"
                android:title="@string/rename_list"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/outline_delete_24"
                android:title="@string/delete_list"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>