<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="64dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:ellipsize="marquee"
        android:maxLines="3"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="This is a really long text that will likely get cut off" />

    <TextView
        android:id="@+id/due_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
        tools:text="2222-22-22" />

    <TextView
        android:id="@+id/snoozed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:drawableLeftCompat="@drawable/outline_alarm_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
        tools:text="2222-22-22" />

    <TextView
        android:id="@+id/archived_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:drawableLeftCompat="@drawable/outline_archive_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
        tools:text="2222-22-22" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/snoozed_text_view"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/snooze_to_tomorrow_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/snooze_to_tomorrow"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                app:icon="@drawable/outline_plus_one_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/remove_snooze_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remove_snooze"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                app:icon="@drawable/outline_alarm_off_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unsnooze"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reschedule_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reschedule_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                app:icon="@drawable/outline_schedule_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <TextView
                android:id="@+id/schedule_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="30 Months" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/archive_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/archive_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                app:icon="@drawable/outline_archive_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/archive"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/unarchive_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/unarchive_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                app:icon="@drawable/outline_unarchive_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unarchive"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="0dp"
                app:icon="@drawable/outline_edit_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
